# genrepredictor

./: .gitignore  How to Run on Jedi.txt  How to run.txt  app.py  commands.sh  config.ini  db_utility.py  download_GenreList.py  genres.txt  genres_predictor.py  imageFilesTools.py  level2app.py  loggingmodule.py  model.py  pyproject.toml  requirements.txt  wav_specto_slice_for_ExistingFiles.py
