[tool.poetry]
name = "genrepredictor"
version = "0.1.0"
description = "API to predict generes and styles for a song"
authors = ["Gunjan Jamuar <gunjanjamuar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Flask = "^2.2.2"
configparser = "^5.3.0"
mysql-connector-python = "^8.0.31"
numpy = "^1.23.5"
tflearn = "^0.5.0"
tensorflow = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
